--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 <nav class="bg-white border-gray-200 dark:bg-gray-900">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
     <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
-        <img src="IMG_20240427_173849.jpg" class="h-8" alt="Flowbite Logo" />
+        <img src="IMG_20240427_173849.jpg" class="h-8" alt="Vardhan411205" />
         <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Jovardhan</span>
     </a>
     <div class="flex items-center md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
